align carousel plan, fix select button

--- a/css/common.css
+++ b/css/common.css
@@ -23,6 +23,8 @@
     --svg-bg-arrow-mobile-color: #242D31; 
     --svg-arrow-color: #fff;
     --svg-bn-hover: #235565;
+    --pricing-label-color: #ddd;
+    --pricing--label-checked-color: #333;
     --details-card-bg-color: #f8fafb;
     --footer-bg: #f8fafb;
     --footer-links: rgba(35, 85, 101, 0.46);
