--- a/css/pricing.css
+++ b/css/pricing.css
@@ -43,10 +43,11 @@
   text-align: left;
 }
 
-.pricing__description {
+p.pricing__description {
   color: var(--text-color);
   font-size: 1.1rem;
   font-family: "Poppins", sans-serif;
+  font-weight: normal;
   margin-top: 25px;
   line-height: normal;
   text-align: left;
@@ -79,6 +80,7 @@
   color: var(--time-color);
   font-family: "Poppins", sans-serif;
   font-size: 1.1rem;
+  font-weight: normal;
 }
 
 /* Pricing Carousel Plan */
@@ -92,14 +94,16 @@
 .pricing__button-left,
 .pricing__button-right {
   position: absolute;
-  top: 50%;
+  top: calc(50% - 550px);
   transform: translateY(-50%);
-  background: none;
+  background-color: var(--svg-bg-arrow-mobile-color);
   border: none;
   cursor: pointer;
   border-radius: 50%;
   fill: var(--svg-arrow-color);
-  background-color: var(--svg-bg-arrow-mobile-color);
+  height: 24px;
+  width: 24px;
+  padding: 4px;
 }
 
 .pricing__button-left {
@@ -108,6 +112,21 @@
 
 .pricing__button-right {
   right: 10px;
+}
+
+.pricing__carousel-plan .pricing__button-prev {
+  transform: rotateY(180deg);
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  overflow: visible !important;
+}
+
+.pricing__button-next {
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  overflow: visible !important;
 }
 
 /* Carousel Wrapper */
@@ -120,7 +139,7 @@
 
 /* Carousel Inner */
 .pricing__carousel-inner {
-  flex: 0 0 100%;
+  flex: 1 0 100%;
   box-sizing: border-box;
   padding: 0 10px;
 }
@@ -140,6 +159,7 @@
   font-size: 2.27rem;
   font-family: "Poppins", sans-serif;
   font-weight: bold;
+  text-align: left;
 }
 
 .pricing__plan-title {
@@ -197,14 +217,12 @@ ul li {
 /* Pricing Select Button */
 .pricing__select-button {
   margin-top: 20px;
-  display: inline-block;
   background-color: var(--bn-select-color);
   border: 1px solid var(--bn-select-color);
   border-radius: 5px;
   cursor: pointer;
   width: 9.35rem;
-  height: 2.8rem;
-  box-shadow: -3px -3px #dfdfdf, 0.5em 0.4em #dfdfdf;
+  box-shadow: -3px -3px #dfdfdf, 0.3em 0.25em #dfdfdf;
 }
 
 .pricing__select-plan {
@@ -215,11 +233,24 @@ ul li {
   text-align: center;
   font-weight: bold;
   padding: 10px 15px;
-  margin: 10px;
+  width: 100%;
+  display: block;
 }
 
 .pricing__select-bn-content {
   padding-right: 20px;
+}
+
+.pricing__select-bn-arrow {
+  font-size: 0.75rem;
+  font-weight: 600;
+}
+
+a.pricing__select-plan:hover {
+  background-color: var(--select-hover-color);
+  border-color: var(--select-hover-color);
+  text-decoration: none;
+  color: var(--button-text-color);
 }
 
 /* Pricing Indicators */
@@ -227,6 +258,7 @@ ul li {
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .pricing__indicator {
@@ -239,12 +271,12 @@ ul li {
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background-color: #ddd;
+  background-color: var(--pricing-label-color);
   margin: 0 5px;
   cursor: pointer;
 }
 
 /* Checked Indicator Styles */
 .pricing__indicator:checked + label {
-  background-color: #333;
+  background-color: var(---pricing-label-checked-color);
 }
